--- a/CSS training/cartao.css
+++ b/CSS training/cartao.css
@@ -10,20 +10,37 @@ body {
     background-color: #ffb52b;
 }
 
+/* configurações flip card*/
+div.flip-container {
+    position: absolute;
+    width: 400px;
+    height: 180px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    perspective: 1000px;
+}
+
+#virar:checked ~ .flip-container .flipper {
+    transform: rotatey(180deg);
+    transition: transform 0.8s;
+}
+.flipper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+}
 
 div#cartao {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    position: absolute;
     background-color: lightskyblue;
-    width: 400px;
+    width: 100%;
     height: 180px;
     padding: 25px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     border-radius: 20px;
     box-shadow: 2px 2px 3px #00000096;
 }
@@ -83,3 +100,40 @@ span#name {
     left: 350px;
 }
 
+#cartao_back {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: baseline;
+    background-color: lightskyblue;
+    width: 100%;
+    height: 180px;
+    padding: 25px;
+    border-radius: 20px;
+    box-shadow: 2px 2px 3px #00000096;
+    transform: rotateY(180deg);
+}
+
+span#retangulo {
+    background-color: lightslategray;
+    width: 448px;
+    height: 30px;
+    margin-right: -25px;
+}
+
+#segurança {
+    height: 20px;
+    margin-top:5px;
+    margin-right: 120px;
+    outline: 0;
+    text-align: right;
+}
+
+#cartao, #cartao_back {
+    position: absolute;
+    backface-visibility: hidden;
+}
+
+#virar {
+    display: none;
+}
