--- a/CSS training/formulario.css
+++ b/CSS training/formulario.css
@@ -7,6 +7,10 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+main {
+    background-color: black;
+    height: 100vh;
+}
 
 @media (max-width:2500px) {
     
@@ -52,7 +56,6 @@ nav > a:hover {
 
 section {
     display: flex;
-    background-color: black;
     color: white;
     padding: 30px 0;
 }
@@ -70,7 +73,7 @@ section {
     align-items: center;
 }
 #check:checked ~.container-form {
-    left: 1px;
+    left: -15px;
     transition: 1.8s;
     height: 80px;
     border-radius: 0 50px 50px 0;
@@ -81,5 +84,93 @@ section {
 #seta {
     margin-right: -38px;
 }
+ /* Configurações login*/
+#login-box {
+    display: flex;
+    color: white;
+    margin-top: -100px;
+    margin-left: 30px;
+    padding: 15px;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+div#user-box {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+}
+
+div#senha-box {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+}
+
+#botao-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+}
+
+@media (max-width:950px) {
+    /* Configurações do newsletter*/
+    .container-form {
+        display: none;
+    }
+    /* Configurações login*/
+    #login-box {
+        display: flex;
+        background-color: black;
+        color: white;
+        margin-top: 0;
+        padding: 10px;
+        align-items: center;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    div#user-box {
+        display: flex;
+        flex-direction: column;
+        gap: 2px;
+        margin-bottom: 15px;
+    }
+
+    div#senha-box {
+        display: flex;
+        flex-direction: column;
+        gap: 2px;
+        margin-bottom: 15px;
+    }
+    input#senha {
+        margin-bottom: 8px;
+    }
+    input#save {
+        width: 11px;
+        height: 11px;
+    }
+    span#salvar-senha {
+        font-size: 0.9em;
+        text-transform: lowercase;
+        margin-bottom: 10px;
+    }
+    span#recuperar-senha {
+        text-align: center;
+    }
+    #recuperar-senha > a {
+        color: white;
+        text-decoration: none;
+    }
+    #recuperar-senha > a:hover {
+        text-decoration: underline;
+    }
+
+    #botao-box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
