--- a/CSS_training/landingpage01/estilos/telasp.css
+++ b/CSS_training/landingpage01/estilos/telasp.css
@@ -79,8 +79,83 @@ body {
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 610px) {
     div#img-container img {
         width: 300px;
     }
+/* section mostrando os trabalhos criados*/
+section#my-work {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+div.content {
+    display: flex;
+    position: relative;
+    background-color: var(--red-color2);
+    width: 290px;
+    height: 350px;
+    padding: 10px;
+    border-radius: 10px;
+    flex-direction: column;
+    align-items: center;
+
+}
+div.works {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+div.works p:first-child {
+    color: var(--white-color);
+    font-size: 1.6em;
+    text-shadow: 1px 1px 2px black;
+}
+div.works p:last-child {
+    color: var(--yellow-color);
+    padding-bottom: 15px;
+}
+div.img-box {
+    margin-bottom: 10px;
+    border: 4px solid var(--white-color);
+    width: 200px;
+    border-radius: 8px;
+
+}
+#my-work img {
+    display: block;
+    margin: auto;
+}
+div.legenda{
+    display: flex;
+    letter-spacing: 1px;
+    color: var(--white-color);
+    text-shadow: 1px 1px 2px black;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+}
+/* branding, indetity*/
+span.modelos-box {
+    background-color: var(--yellow-color);
+    color: var(--red-color);
+    padding: 2px 10px;
+    font-size: .9em;
+    text-shadow: none;
+    border-radius: 3px;
+}
+
+div.show {
+    margin-top: 35px;
+}
+
+.btn-show {
+    position: relative;
+    left: 10px;
+    padding: 10px;
+    border-radius: 50%;
+    border: 0;
+    cursor: pointer;
+}
 }
