--- a/CSS_training/landingpage01/estilos/style.css
+++ b/CSS_training/landingpage01/estilos/style.css
@@ -115,6 +115,8 @@ nav#redes-sociais {
 section#apresentaçao {
     display: flex;
     align-items: center;
+    justify-content: center;
+
 }
 /*Configuração do oskar container*/
 div#oskar-container {
