--- a/CSS_training/landingpage01/estilos/style.css
+++ b/CSS_training/landingpage01/estilos/style.css
@@ -128,7 +128,8 @@ div#learn-more {
     height: 50px;
     margin-right: 45px;
     align-items: center;
-    align-self: flex-end;
+    align-self: flex-end; 
+    cursor: pointer;
 }
 #yellow-block {
     background-color: var(--yellow-color);
@@ -175,7 +176,9 @@ div.content {
     background-color: var(--red-color2);
     height: 350px;
     padding: 10px;
+    margin-bottom: 50px;
     border-radius: 10px;
+    box-shadow: 2px 3px 3px #00000070;
     flex-direction: column;
 }
 div.works {
@@ -227,10 +230,127 @@ div.show {
 
 .btn-show {
     position: relative;
+    background-color: var(--white-color);
     left: 10px;
     padding: 10px;
     border-radius: 50%;
     border: 0;
     cursor: pointer;
 }
+.btn-show:hover {
+    background-color: #e7e7e7;
+    transform: scale(105%);
+}
+/* Configurações de Conferences & Events*/
+section#events h1 {
+    color: var(--white-color);
+    margin-bottom: 20px;
+    letter-spacing: 1px;
+    font-size: 2.1em;
+    text-align: center;
+}
+div#conferences {
+    display: flex;
+    justify-content: center;
+}
+#conferences span {
+    color: var(--white-color);
+    padding: 8px 50px;
+    margin-bottom: 50px;
+    font-size: 0.9em;
+    border: 1px solid #f5523c;
+    border-radius: 8px;
+    cursor: pointer;
+}
+#conferences span:hover{
+    background-color: var(--white-color);
+    color: var(--red-color2);
+    z-index: 1;
+    box-shadow: 2px 2px 3px #00000028;
+    transform: scale(103%);
+    transition: all 400ms;
+}
+/*Configurações locais dos eventos*/
+div#paises {
+    display: flex;
+    color: var(--white-color);
+    visibility: hidden;
+    margin-bottom: 50px;
+    font-size: 0.9em;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+.locais {
+    display: flex;
+    padding: 15px 0;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    border-top: 2px solid #f5523c;
+    border-bottom: 2px solid #f5523c;
+    width: 440px;
+}
+/* configurações 2023 best*/
+section#best {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+#logo {
+    display: flex;
+    z-index: 1;
+    background-color: var(--red-color2);
+    padding: 10px;
+    margin-right: -22px;
+    border: 2px solid #F04B38;
+    border-radius: 8px 0 0 8px;
+    box-shadow: 5px 2px 3px #00000059;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+}
+#oskar-logo {
+    display: flex;
+    color: var(--white-color);
+    align-items: center;
+    gap: 4px;
+}
+#oskar-logo div  {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+#oskar-logo h1 {
+    background-color: var(--white-color);
+    color: var(--red-color2);
+    width: 45px;
+    font-size: 2.1em;
+    text-align: center;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    text-shadow: none;
+}
+#oskar-logo p {
+    margin-top: -6px;
+    margin-bottom: -1px;
+    letter-spacing: 6px;
+}
+div#tittle-best p, h1 {
+    color: var(--white-color);
 
+}
+#tittle-best h1 {
+    font-size: 2.2em;
+}
+#tittle-best p {
+    font-size: 0.9em;
+    
+}
+
+#img-branding-2 {
+    z-index: 0;
+    border: 4px solid var(--white-color);
+    border-radius: 8px;
+}
