--- a/CSS_training/landingpage01/estilos/telasp.css
+++ b/CSS_training/landingpage01/estilos/telasp.css
@@ -157,4 +157,43 @@ div.show {
     border: 0;
     cursor: pointer;
 }
+/* configurações locais do conferences e events*/
+#conferences span {
+    color: var(--white-color);
+    padding: 8px 30px;
+    margin-bottom: 50px;
+    font-size: 0.9em;
+    border: 1px solid #f5523c;
+    border-radius: 8px;
+    cursor: pointer;
+}
+.locais {
+    display: flex;
+    padding: 15px 0;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    border-top: 2px solid #f5523c;
+    border-bottom: 2px solid #f5523c;
+    width: 290px;
+}
+/* configurações 2023 best*/
+section#best {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+}
+div#logo {
+    width: 290px;
+}
+#img-branding-2 {
+    z-index: 0;
+    border: 4px solid var(--white-color);
+    border-radius: 8px;
+    width: 290px;
+}
+#img-branding-2 img {
+    width: 290px;
+}
 }
