Finalizado a landing page

--- a/CSS_training/landingpage01/estilos/style.css
+++ b/CSS_training/landingpage01/estilos/style.css
@@ -353,4 +353,144 @@ div#tittle-best p, h1 {
     z-index: 0;
     border: 4px solid var(--white-color);
     border-radius: 8px;
+    box-shadow: 5px 2px 3px #00000059;
+}
+/* Configurações carrosel personal awards*/
+section#personal-award {
+    display: flex;
+    background-color: var(--red-color2);
+    padding: 20px;
+    margin: 50px 0 50px 180px;
+    border-radius: 15px 0 0 15px ;
+    justify-content: left;
+}
+div.carrosel-container {
+    display: flex;
+}
+div.carrosel-controle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+.carrosel-controle h1  {
+    font-size: 2.2em;
+}
+div.carrosel-conteudo {
+    display: flex;
+    padding-left: 15px;
+    gap: 80px;
+}
+/* Configuração dos premios*/
+#award1, #award2, #award3 {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+}
+
+.awards h2 {
+    color: var(--white-color);
+    margin-bottom: 3px;
+    font-size: 1.4em;
+}
+.awards > span {
+    padding: 0 8px;
+    color: var(--yellow-color);
+    border: 2px solid var(--yellow-color);
+    border-radius: 3px;
+}
+/* Configurações dos botões left e right*/
+
+.left, .right {
+    background-color: transparent;
+    padding: 7px;
+    margin-top: 8px;
+    border: 1px solid #d13f2f;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.left:hover, .right:hover {
+    position: relative;
+    background-color: #bdbdbd1e;
+    transition: all 500ms;
+    transform: scale(103%);
+    box-shadow: 2px 3px 3px #0000003a;
+    top: -4px;
+}
+/* Configurações das redes sociais*/
+section.container-redes {
+    display: flex;
+    background-color: var(--red-color2);
+    padding: 20px;
+    margin: 50px 0 50px 180px;
+    border-radius: 15px 0 0 15px ;
+    justify-content: left;
+}
+div#redes-sociais {
+    display: flex;
+    padding-left: 15px;
+    align-items: center;
+    gap: 60px;
+}
+#redes-sociais h1 {
+    font-size: 2.2em;
+    margin-right: 50px;
+}
+.box-sociais {
+    border: 3px solid var(--white-color);
+    height: 50px;
+    box-shadow: 2px 3px 3px #00000062;
+    border-radius: 8px;
+    cursor: pointer;
+}
+.box-sociais:hover {
+    position: relative;
+    transition:  600ms;
+    transform: scale(105%);
+    box-shadow: 3px 4px 3px #0000006e;
+    top: -10px;
+}
+.box-sociais > div {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+/*Configurações do background das redes sociais*/
+#twitter {
+    background-color: #58b1e9;
+}
+#twitch {
+    background-color: #8850f0;
+}
+#facebook {
+    background-color: #3359a3;
+}
+#instagram {
+    background: #f09433; 
+    background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+    background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+    background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+}
+/* footer*/
+footer {
+    display: flex;
+    background-color: var(--red-color2);
+    color: var(--white-color);
+    padding: 10px;
+    justify-content: center;
+}
+footer a {
+    text-decoration: none;
+    padding: 2px 5px;
+    color: var(--white-color);
+    margin-left: 8px;
+}
+
+footer a:hover {
+    background-color: var(--white-color);
+    color: var(--red-color2);
+    border-radius: 8px;
 }
